Update return messages of all endpoints
Also updated swagger.json accordingly and applied suggestions from code review about vendor model.
