# backend/controllers/authClient.js
@@ -124,27 +124,3 @@ exports.resetPasswordController = BaseUtil.createController((req) => {
       })
     );
 });
-
-exports.loginWithGoogleController = BaseUtil.createController((req) => {
-  let { email, googleID } = req.query;
-  let __type = req.params.clientType.charAt(0).toUpperCase() + req.params.clientType.slice(1);
-
-  email = typeof email == "string" ? email.toLowerCase() : ""; // if it is not valid, validateEmail will reject it
-  return BB.all([
-    AppValidator.validateEmail(email, Messages.RETURN_MESSAGES.ERR_EMAIL_IS_INVALID).reflect(),
-    AppValidator.validateEnum(
-      __type,
-      Object.values({ CUSTOMER: "Customer" }),
-      Messages.RETURN_MESSAGES.ERR_CLIENT_TYPE_IS_INVALID
-    ).reflect(),
-    AppValidator.validateIfString(googleID, Messages.RETURN_MESSAGES.ERR_INVALID_GOOGLE_ID),
-  ])
-    .then((results) => BaseUtil.decideErrorExist(results))
-    .then(() =>
-      ClientService.loginWithGoogleService({
-        email,
-        __type,
-        googleID,
-      })
-    );
-});
